[gd_scene load_steps=2 format=3 uid="uid://b7amam00luyrx"]

[ext_resource type="Script" path="res://scripts/obstacle_spawner.gd" id="1_8e7gq"]

[node name="ObstacleSpawner" type="Node2D"]
script = ExtResource("1_8e7gq")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.7
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
